Added hover effects for content seek

--- a/src/output.css
+++ b/src/output.css
@@ -768,8 +768,20 @@ video {
   margin-left: 1rem;
 }
 
+.hover\:ml-2:hover {
+  margin-left: 0.5rem;
+}
+
+.hover\:mb-1:hover {
+  margin-bottom: 0.25rem;
+}
+
 .hover\:fill-white:hover {
   fill: #fff;
+}
+
+.hover\:pb-1:hover {
+  padding-bottom: 0.25rem;
 }
 
 .hover\:text-white:hover {
